tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/invalid-bin.stderr
TOML parse error at line 1, column 20
  |
1 | invalid-bin = 0b0012
  |                    ^
expected newline, `#`
